# base_chatbot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.main  README.md  docker-compose.yml  nginx.conf  pyproject.toml  save_token.py
.github/workflows/: deploy-docs.yml
backend/: .env  .env.docker  .env.example  API_TESTING_GUIDE.md  README.md  alembic.ini  gunicorn.conf.py  jwt_private.pem  jwt_public.pem  requirements.txt  setup_env.py  update_env_with_jwt.py  verify_auth_config.py
backend/Guides/: BACKEND_SETUP.md  CONFIGURATION.md  TENANT_SETUP_FLOW.md
backend/alembic/: env.py
backend/migrations/: 0_create_tables.py  1_seed_base_data.py  2_seed_llm_models.py  3_seed_tenants.py  4_seed_agents.py  5_seed_tool_configs.py  6_seed_agent_tools.py  (+11 more)
docs/: AGENT_CONFIG_FLOW_VI.md  ARCHITECTURE_VI.md  CODE_REVIEW_IMPROVEMENT_VI.md  DATA_MODEL_VI.md  FLOW_DIAGRAMS_VI.md  PIPELINE_CICD_VI.md  PRD.md  PRD_VI.md  RAG_FLOW_VI.md  README.md  TEST_PLAN_VI.md  USER_STORIES_VI.md
document-project/: TENANT_SETUP_GUIDE.md  architecture-backend.md  architecture-frontend.md  flow_support.md  index.md  integration-architecture.md  project-scan-report.json
docusaurus-site/: DEPLOY.md  README.md  copy-docs.js  docusaurus.config.js  package-lock.json  package.json  sidebars.js
frontend/: App.tsx  Dockerfile.dev  README.md  constants.ts  index.html  package-lock.json  package.json  tailwind.config.ts  test-routing.ts  types.ts  vite.config.ts  widget.html  widget.tsx
my-documentation-website/: package-lock.json  package.json
(+200 files in other folders)
